# claude-code-ragchatbot

./: .gitignore  CLAUDE.md  pyproject.toml  query-flow-diagram.md
.claude/: settings.local.json
backend/: ai_generator.py  app.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: DIAGNOSTIC_REPORT.md  PROPOSED_FIXES.md  README.md  __init__.py  conftest.py  inspect_db.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_e2e_with_api.py  test_rag_system_integration.py  test_real_system.py
frontend/: index.html  script.js  style.css
scripts/: check-all.bat  check-all.sh  format.bat  format.sh  lint.bat  lint.sh  typecheck.bat  typecheck.sh
